2015-06-08  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Initialize dirarray early.

2015-06-06  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Initialize filelist early.

2015-05-27  Mark Wielaard  <mjw@redhat.com>

	* encoded-value.h (read_encoded_value): Check data d_size contains
	at least enough data to hold a pointer for DW_EH_PE_indirect.

2015-05-22  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Limit stack usage of lines
	with MAX_STACK_LINES, files with MAX_STACK_LINES and dirs with
	MAX_STACK_DIRS. Calculate number of dirs needed first, then
	create dirarray directly, without needing the next field. Free
	not stack allocated lines and files at the end.

2015-05-19  Mark Wielaard <mjw@redhat.com>

	* dwarf_getlocation.c (__libdw_intern_expression): Create a stack
	allocated array to hold locs. Allocate locs bigger than the array
	with malloc and free them when done.

2015-05-11  Jonathan Lebon  <jlebon@redhat.com>

	* libdwP.h (DWARF_E_COMPRESSED_ERROR): New enumerator.
	* dwarf_error.c (errmsgs): Add DWARF_E_COMPRESSED_ERROR message.
	* dwarf_begin_elf.c (inflate_section): New static function, lifted
	from...
	(check_section): ... here. Call inflate_section, set libdw errno to
	DWARF_E_COMPRESSED_ERROR if .debug_info section couldn't be inflated.

2015-05-11  Jonathan Lebon  <jlebon@redhat.com>

	* dwarf_begin_elf.c (check_section): Add compressed flag. Always
	check for .zdebug sections. Only wrap decompression in #if USE_ZLIB.

2015-05-06  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getsrclines.c (read_srclines): Use an int64_t to store and
	check the line number.

2015-05-05  Mark Wielaard  <mjw@redhat.com>

	* dwarf_getaranges.c (dwarf_getaranges): Check there is enough data
	left before reading values.

2015-05-04  Anthony G. Basile  <blueness@gentoo.org>

	* Makefile.am (libdw_so_SOURCES): Append $(argp_LDADD) to link
	command.
